Introduce SAH-based BVH implementation and refactor AABB handling